add login form for index.html, add login route for server.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <h4>Registration</h4>
     <form class="form-group" action="{{ url_for('registration') }}" method="post">
       <label for="fn" style="margin-top: 10px; margin-bottom: 5px;">First Name</label>
-        <input type='text' calss='form=control' name='fn' placeholder="First Name">
+        <input type='text' class='form-control' name='fn' placeholder="First Name">
       <label for="ln" style="margin-top: 10px; margin-bottom: 5px;">Last Name</label>
         <input type='text' class="form-control" name='ln' placeholder="Last Name">
       <label for="email" style="margin-top: 10px; margin-bottom: 5px;">Email</label>
@@ -13,8 +13,21 @@
       <label for="pw" style="margin-top: 10px; margin-bottom: 5px;">Password</label>
         <input type='password' class="form-control" name='pw' placeholder="Password">
       <label for="pwconfirm" style="margin-top: 10px; margin-bottom: 5px;">Confirm Password</label>
-      <input type='password' class="form-control" name='pwconfirm' placeholder="Confirm Password">
-
+        <input type='password' class="form-control" name='pwconfirm' placeholder="Confirm Password">
+      <button type="submit" class="btn btn-info" style="margin-top: 10px;">Register</button>
+    </form>
+  </div>
+  <div class="col"  style="margin-right: 25px;">
+    <h4>Login</h4>
+    <form class="form-group" action="{{ url_for('login') }}" method="post">
+      <label for="email" style="margin-top: 10px;">Email</label>
+        <input type='text' class="form-control" name='email' placeholder="Email">
+      <label for="pw" style="margin-top: 10px;">Password</label>
+        <input type='password' class="form-control" name='pw' placeholder="Password">
+      <button type="submit" class="btn btn-info" style="margin-top: 10px;">Log In</button>
+    </form>
+  </div>
+</div>
 
 
 {% endblock %}
