--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,11 +10,19 @@
     <div class="container-fluid"
 		<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin: 10px 25px;">
   		<a class="btn btn-outline-success my-2 my-sm-0" href="/">Home Please</a>
+      {% if 'user' in session %}
+        <p>Hello {{session['user']['first_name']}}</p>
+        <a class="btn btn-outline-success my-2 my-sm-0" href="/logout">Logout</a>
+      {% else %}
+        <a class="btn btn-outline-success my-2 my-sm-0" href="/logout">Login or Register</a>
+      {% endif %}
 		</nav>
     <div class="container-fluid" style="margin: 10px 0px 10px -15px">
       <div class="jumbotron" style="margin-right: 25px; background-color: #616872; color: #aaacaf">
         <img src="{{ url_for('static', filename='images/dojo.png') }}" alt="Coding Dojo logo and text">
         <h1>Dojo Community</h1>
+
+        <h4>{{ session['header_message'] }}</h4>
       </div>
         {% block content %}
         {% endblock %}
