--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,22 +7,34 @@
     <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
   </head>
   <body>
-    <div class="container-fluid"
-		<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin: 10px 25px;">
-  		<a class="btn btn-outline-success my-2 my-sm-0" href="/">Home Please</a>
+    <div class="container-fluid">
+    <div class="container-fluid" style="padding: 0px; padding-right: 55px;">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      </ul>
+      <ul class="navbar-nav" style="text-align: right;">
       {% if 'user' in session %}
-        <p>Hello {{session['user']['first_name']}}</p>
-        <a class="btn btn-outline-success my-2 my-sm-0" href="/logout">Logout</a>
+        <li class="nav-item">
+          <span class="navbar-text" style="color: green;">Hello {{session['user']['first_name']}}</span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
       {% else %}
-        <a class="btn btn-outline-success my-2 my-sm-0" href="/logout">Login or Register</a>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Login or Register</a>
+        </li>
       {% endif %}
+      </ul>
 		</nav>
+    </div>
     <div class="container-fluid" style="margin: 10px 0px 10px -15px">
       <div class="jumbotron" style="margin-right: 25px; background-color: #616872; color: #aaacaf">
         <img src="{{ url_for('static', filename='images/dojo.png') }}" alt="Coding Dojo logo and text">
         <h1>Dojo Community</h1>
-
-        <h4>{{ session['header_message'] }}</h4>
       </div>
         {% block content %}
         {% endblock %}
